--- a/css/common.css
+++ b/css/common.css
@@ -487,121 +487,16 @@ form select{
    border-radius:10px;
 }
 /* 行動版Nav */
-.monavbar{
-    position: absolute;
-    background-color: #90B44B;
-    /* top: 10%;
-    left: 20%; */
-    width: 15%;
-    display: flex;
-    justify-content: space-evenly;
-    border-radius: 0 50px 50px 0;
-    transition: .2s;
-    transform-origin: left;
-}
-.monavbar i{
-    line-height: 2rem;
-}
 .monav{
-    display: flex;
-    position: sticky;
-    top: 0;
-    right: 0;
-    z-index: 20;
-    justify-content:flex-start;
-    align-items: center;
+display: none;
 }
-.openm{
-    position:fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(51, 51, 51, .6);
-    backdrop-filter: blur(5px);
-    transition: .2s;
-}
-.monav .monav i{
-    font-size: 1.2rem;
-}
-.momenu{
-    width: 30%;
-    height: 30%;
-    position: absolute;
-    display: flex;
-    top: 1rem;
-    justify-content: center;
-    align-items: center;
-    transition: .3s .2s;
-}
-.active{
-    width: 350px;
-    height:350px;
-}
-.momenu .center{
-    position: absolute;
-    top: 0;
-    z-index: 10;
-    width: 60%;
-}
-.momenu .center>a{
-    display: block;
-    width: 100%;
-    
-}
-#monavlogo{
-    width: 100%;
-    z-index: 12;
-}
-
-.momenu li{
-    position: absolute;
-    transform-origin:175px;
-    transition: 1.2s;
-    transition-delay:calc( (360deg / 6 * var(--i)));
-    transform:rotate(0deg) translateX(150px);
-    top: 0;
-}
-.momenu li a{
-    transform: rotate(calc(360deg / -6 * var(--i)));
-    display: flex;
-    background-color: #fff;
-    width: 50px;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-}
-.momenu li:nth-child(2) i{
-    display: block;
-    background-color: #fff;
-    width: 50px;
-    text-align: center;
-    line-height:50px ;
-    border-radius: 50px;
-    font-size: 1.5rem;
-    color: #2C6E00;
-}
-.momenu li a i{
-    font-size: 1.5rem;
-    color: #2C6E00;
-}
-.momenu.momenuopen li{
-    top: 50%;
-    left: 0;
-    transform:translateY(-50%) rotate(calc(360deg / 6 * var(--i)));
-
-}
-.momenu.momenuopen .center a img{
-    width: 150px;
-}
-
-
 @media screen and (hover:hover){
+    
 .btnchangecolor:hover{
     background-position: 0% 0%;
 }
 .server:hover>label{
-    background: no-repeat center/100% url("../logo/serviceopen.svg")
-    ;
+    background: no-repeat center/100% url("../logo/serviceopen.svg");
 }
 .footer .social i:hover{
     color: #2C6E00;
@@ -611,7 +506,132 @@ form select{
     background-color: #FFF4E2;
 }
 }
-@media screen and (max-width:767px){
+@media screen and (max-width:768px){
+    .monav{
+        position: sticky;
+        top: 0;
+        right: 0;
+        z-index: 20;
+    }
+    .monav.open{
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        background-color: rgba(187, 187, 187, 0.4);
+        backdrop-filter: blur(5px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .monav .monavbar{
+        position: absolute;
+        top: 65px;
+        left: 130px;
+        width: 150px;
+        background-color: #90B44B;
+        border-radius:0 50px 50px 0 ;
+        text-align: center;
+        transition: .2s;
+        transform-origin: left;
+        transform: scaleX(1);
+        box-shadow: 0px 5px 3px rgba(81, 96, 110,.3);
+    }
+    .monav .monavbar i{
+        cursor: pointer;
+        font-size: 1.2rem;
+        margin:0px 6px;
+        line-height: 50px;
+    }
+    .monavbar.small{
+        transition: .3s;
+        transform: scaleX(0);
+    }
+    .momenu{
+        position: relative;
+        width: 180px;
+        height: 180px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .monav.open .momenu{
+        width: 350px;
+        height: 350px;
+    }
+    .momenu .center a img{
+        width: 100px;
+    }
+    .momenu .center{
+        position: absolute;
+        z-index: 20;
+        
+    }
+    .momenu li{
+        position: absolute;
+        transform-origin: 175px;
+        left: 0;
+        transition: .6s;
+        transition-delay:calc(.1s * var(--i)) ;
+        transform: rotate(0deg) translateX(170px);
+        opacity: 0;
+    }
+    #close{
+        display: flex;
+        background-color: #fff;
+        width: 50px;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        box-shadow: 0px 0px 5px rgba(81, 96, 110, .2);
+        cursor: pointer;
+    }
+    #close i,.momenu li a i{
+        color: #2C6E00;
+        font-size: 1.5rem;
+        text-shadow: 0px 0px 3px #fff;
+    }
+    .momenu li a{
+        display: flex;
+        background-color: #fff;
+        width: 50px;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        box-shadow: 0px 0px 5px rgba(81, 96, 110, .2);
+    }
+    .momenu.active li{
+        width: 50px;
+    }
+    .momenu li p{
+        transform: scaleX(0);
+        font-size: 1.1rem;
+        font-weight: 700;
+        margin-left: 5px;
+        text-wrap: nowrap;
+        transition: .2s;
+        transform-origin: left;
+    }
+    .momenu.active p{
+        transform: scaleX(1);
+        transition: .2s;
+    }
+    header{
+        display: none;
+    }
+    nav{
+        display: none;
+    }
+    .monav{
+        display: block;
+    }
+    .momenu.active li{
+        transform:rotate(calc(360deg/6 * var(--i))); 
+    }
+    .momenu.active li a{
+        transform: rotate(calc(360deg / -6 * var(--i)));
+    }
     .cloudtitle{
         font-size: 1.2rem;
         height: 200px;
@@ -654,5 +674,38 @@ form select{
     }
     footer>p{
         padding: 0px 10px;
+    }
+    .monav.open .momenu{
+        width: 200px;
+        height: 200px;
+    }
+    .monav.open{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .momenu li a{
+        width: 130px;
+        transform: rotate(0);
+        transition: 0;
+    }
+    .momenu.active li a{
+        transform: rotate(0);
+        transition: 0;
+    }
+    .momenu.active li{
+        top:150px;
+        transform:translateY(calc(60px * var(--i))); 
+    }
+    .momenu li{
+        transition: 0;
+        transform-origin: center;
+        left: 18%;
+        transform:translateX(0px)
+    }
+    .momenu.active li:nth-child(2){
+        transition: 0;
+        transform:translateX(40px)
     }
 }
